Fixed banner size on small devices

--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -33,3 +33,10 @@ span {
    width: fit-content !important;
  }
 }
+
+
+@media (max-width: 400px) {
+  div {
+    font-size: 3em;
+  }
+}
